# autoencoders-gan

./: Makefile  README.md  pyproject.toml
autoencoders_gan/: __init__.py  dataset.py  features.py  plots.py
autoencoders_gan/modeling/: predict.py  train.py
models/: Models_download.md
notebooks/: 01_Image_Processing.ipynb  02_AE_model.ipynb  02_DAE_Model.ipynb  03_DAE_Model.ipynb  04_VAEs_Model.ipynb  05_VAEs_latent_EDA.ipynb
references/: References.md
